# random-utils

./: .gitignore  meson.build  readme.md
.github/workflows/: build.yml
inc/RUtils/: CommandLine.hpp  Defer.hpp  Error.hpp  ErrorOr.hpp  ForEach.hpp  Helpers.hpp  Link.hpp  Platform.hpp  Process.hpp  Request.hpp  Unicode.hpp
src/: CommandLine.cpp  Error.cpp  ErrorOr.cpp  Helpers.cpp  Link.cpp  Process.cpp  Request.cpp  Unicode.cpp  meson.build
tests/: meson.build
tests/Defer/: basic.cpp  fail.cpp  meson.build
tests/ErrorOr/: basic_type.cpp  class.cpp  class2.cpp  meson.build  move_copy_count.cpp  void.cpp  void2.cpp
tests/Request/: download.cpp  meson.build
